Refactor ApplicationExceptionHandler for improved readability and efficiency